newweb/nmrbox/src/app/software/software-list.component.scss
#info-box {
  margin: 0px auto;
}

mat-grid-list {
  max-width: 940px;
  width: 92%;
  margin: 10px auto;
  padding: 10px;

  .standard-card {
    min-height: 200px;
    margin: 5px;
    padding-right: 20px;

    .mat-card-title {
      font-weight: bold;
    }
    .mat-card-content {
      min-height: 105px;
      font-weight: 400;
    }
    ul.icon-list {
      height: 65px;
      bottom: 10px;
      position: absolute;
    }
  }
  /* indent content of left cards to align with header & rest of page */
  .tile-dashed:nth-of-type(1), .tile-dashed:nth-of-type(4), .tile-dashed:nth-of-type(7), .tile-dashed:nth-of-type(10), .tile-dashed:nth-of-type(13) {
    mat-card-header, mat-card-content, .icon-list {
      margin-left: 17px;
    }
  }
}

.mat-grid-tile:hover {
  cursor: pointer;
/*  box-shadow: 0 3px 1px -2px rgba(0, 0, 0, .2), 0 2px 2px 0 rgba(0, 0, 0, .14), 0 1px 5px 0 rgba(0, 0, 0, .12) !important;*/
}

::ng-deep .mat-select-value {
  max-width: inherit !important;
}

.spacer-span {
  margin-left: 1em;
  margin-right: 1em;
}

.sw-card {
  box-shadow: none !important;
  width: calc(100% - 30px);
  height: calc(100% - 30px);
}

::ng-deep .software-selector-dropdown {
  min-width: calc(100% + 60px) !important;
}

.software-selector {
  min-width: 210px !important
}

